document left,top 동작 변경 완료

--- a/editor.html
+++ b/editor.html
@@ -112,8 +112,9 @@
 
 
             editor.document.zoom = 1
-            editor.document.layer.left = 30
-            editor.document.layer.zoom = 1.5
+            editor.document.angle = 0.05
+            editor.document.layer.left = 0
+            editor.document.layer.zoom = 1
 
             const wcl4 = globalThis.wcl4 = new Layer(100,100);
             wcl4.fill('#ff000066')
