--- a/editor.html
+++ b/editor.html
@@ -555,81 +555,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="modal-brush-config"  aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h2 class="modal-title fs-4">brush</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <form name="formBrushConfig" action="" oninput="b1.setBrushConfig(Wc.HtmlUtil.formToObject(this));b1.flush();  return false" >
-                            <div class="text-center d-flex justify-content-center align-items-center" style="min-height: 100px;">
-                                <canvas id="brush1" is="wc-brush" width="5" height="5"></canvas>
-                            </div>
-                            <hr>
-                            <div class="d-flex flex-wrap gap-1 property-wrap">
-                                <div class="input-group">
-                                    <span class="input-group-text" >size</span>
-                                    <input class="form-control" type="number" name="size" placeholder="size"
-                                        onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
-                                        value="5"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >roundness(원형율)</span>
-                                    <input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1"
-                                        onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
-                                        value="1"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >angle(각도)</span>
-                                    <input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1"
-                                        onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
-                                        value="0"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >hardness(경도)</span>
-                                    <input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1"
-                                        onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
-                                        value="1"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >opacity(불투명도)</span>
-                                    <input class="form-control" type="number" name="opacity" placeholder="opacity" step="0.05" min="0" max="1"
-                                        onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
-                                        value="1"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >spacing(간격)</span>
-                                    <input class="form-control" type="number" name="spacing" placeholder="spacing" step="0.005" min="0.005" max="2"
-                                        onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"
-                                        value="0.25"
-                                        >
-                                </div>
-                                <div class="input-group">
-                                    <span class="input-group-text" >solidColor(단색)</span>
-                                    <select class="form-select " name="solidColor" id="" onfocus="if(b1){ this.value = b1.brushConfig[this.name];}"  >
-                                        <option selected value="">NO</option>
-                                        <option value="1">YES</option>
 
-                                    </select>
-                                </div>
-
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
 
@@ -688,19 +614,25 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="my-1 d-flex justify-content-end gap-1">
-                            <div class="d-flex justify-content-start gap-1">
+                        <div class="d-flex flex-column gap-1">
+                            <div class="d-flex justify-content-end gap-1">
                                 <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.addLayer();editor?.document?.layer.flush();"><i class="bi bi-plus-circle"></i></button>
                                 <button type="button" class="btn btn-primary" onclick="editor?.document?.layer.clear();editor?.document?.layer.flush();editor?.document?.history.save('layer.clear')"><i class="bi bi-eraser-fill"></i></button>
                                 <button type="button" class="btn btn-primary" onclick="editor?.document?.layers.remove();editor?.document?.layer.flush()"><i class="bi bi-trash"></i></button>
-
-                            </div>
-                            <div class="d-flex justify-content-end gap-1 flex-fill">
-                                <input type="range" id="layer-alpha" min="0" max="1" value="1" step="0.01" oninput="if(editor?.document?.layer){ editor.document.layer.alpha = this.value; editor.document.layer.flush(); editor.document.layers.ready()}" >
                                 <button type="button" class="btn btn-primary" onclick="editor?.document.layers.moveUp()"><i class="bi bi-layer-forward"></i></button>
                                 <button type="button" class="btn btn-primary" onclick="editor?.document.layers.moveDown()"><i class="bi bi-layer-backward"></i></button>
                             </div>
+                            <div class="d-flex justify-content-end gap-1 flex-fill">
+                                <div class="input-group" style="width:20em">
+                                    <span class="input-group-text justify-content-center" style="width:4em" >Alpha</span>
+                                    <div class="form-control">
+                                        <input type="range" class="form-range m-0 d-block" id="layer-alpha" min="0" max="1" value="1" step="0.01" oninput="if(editor?.document?.layer){ editor.document.layer.alpha = this.value; editor.document.layer.flush(); editor.document.layers.ready()}" >
+                                    </div>
+                                </div>
+                                
+                            </div>
                         </div>
+
                         <hr class="my-1">
                         <template id="template-layer-box" >
                             <div class="layer-box d-flex gap-1 align-items-center p-1" role="button">
@@ -976,6 +908,59 @@
             })
         </script>
 
+
+        <div class="modal fade" id="modal-brush-config"  aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h2 class="modal-title fs-4"><i class="bi bi-brush"></i> Brush config</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body brush-config">
+                        <form name="formBrushConfig" action="" oninput="b1.setBrushConfig(Wc.HtmlUtil.formToObject(this));b1.flush();  return false" >
+                            <div>
+                                <div class="brush-wrap text-center d-flex justify-content-center align-items-center mx-auto" style="height: 200px;">
+                                    <canvas id="brush1" is="wc-brush" width="5" height="5"></canvas>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="d-flex flex-wrap gap-1 property-wrap">
+                                <div class="input-group"><span class="input-group-text" >size</span><input class="form-control" type="number" name="size" placeholder="size" value="5" ></div>
+                                <div class="input-group"><span class="input-group-text" >roundness(원형율)</span><input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1" value="1" ></div>
+                                <div class="input-group"><span class="input-group-text" >angle(각도)</span><input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1" value="0" ></div>
+                                <div class="input-group"><span class="input-group-text" >hardness(경도)</span><input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1" value="1" ></div>
+                                <div class="input-group"><span class="input-group-text" >opacity(불투명도)</span><input class="form-control" type="number" name="opacity" placeholder="opacity" step="0.05" min="0" max="1" value="1" ></div>
+                                <div class="input-group"><span class="input-group-text" >spacing(간격)</span><input class="form-control" type="number" name="spacing" placeholder="spacing" step="0.005" min="0.005" max="2" value="0.25" ></div>
+                                <div class="input-group">
+                                    <span class="input-group-text" >solidColor(단색)</span>
+                                    <select class="form-select " name="solidColor" id="" >
+                                        <option selected value="false">NO</option>
+                                        <option value="true">YES</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script>
+            window.addEventListener('load',(event)=>{
+                // window.modalLayer = new bootstrap.Modal('#modal-layer-config')
+                document.querySelector('#modal-brush-config').addEventListener('show.bs.modal', event => {
+                    const brush = editor.brush
+                    event.target.brush = brush;
+                    const f = formBrushConfig;
+                    Wc.HtmlUtil.objectToForm(brush.brushConfig,f)
+                })
+            })
+        </script>
     </div>
     
 </body>
