--- a/editor.html
+++ b/editor.html
@@ -58,18 +58,6 @@
         canvas{
             outline: 1px dashed #aabbcc99;
         }
-        #div-for-debug canvas{
-            max-width: 30px;
-            vertical-align: middle;
-        }
-        .property-wrap > .input-group{
-            width: auto;
-            /* min-width: 10em; */
-        }
-        .property-wrap > .input-group :where(.form-control, .form-select){
-            min-width: 4em;
-            width: auto;
-        }
     </style>
     <script type="module">
         import HtmlUtil from "./wc/lib/HtmlUtil.js";
@@ -203,11 +191,11 @@
         <div class="wc-app-wrap">
             <div class="wc-app-header">
                 <div class="wc-app-nav d-flex gap-1 px-1 py-1 justify-content-center mx-auto">
-                    <button type="button" class="btn btn-lg btn-outline-light p-1" style="width:2em;height:2em;" data-bs-toggle="modal" data-bs-target="#modal-menu-main"><i class="bi bi-menu-app"></i></button>
-                    <button type="button" class="btn btn-lg btn-outline-light p-1" style="width:2em;height:2em;" data-bs-toggle="button" onclick="wcApp.classList.toggle('show-wc-app-menu-tools'); this.blur()"><i class="bi bi-brush"></i></button>
-                    <button type="button" class="btn btn-lg btn-outline-light p-1" style="width:2em;height:2em;" data-bs-toggle="modal" data-bs-target="#modal-layers"><i class="bi bi-layers"></i></button>
-                    <button type="button" class="btn btn-lg btn-outline-light p-1" style="width:2em;height:2em;"><i class="bi bi-palette"></i></button>
-                    <button type="button" class="btn btn-lg btn-outline-light p-1" style="width:2em;height:2em;" data-bs-toggle="button" onclick="wcApp.classList.toggle('show-wc-app-menu-propeties'); this.blur()"><i class="bi bi-sliders2"></i></button>
+                    <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-menu-main"><i class="bi bi-menu-app"></i></button>
+                    <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="button" onclick="wcApp.classList.toggle('show-wc-app-menu-tools'); this.blur()"><i class="bi bi-brush"></i></button>
+                    <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="modal" data-bs-target="#modal-layers"><i class="bi bi-layers"></i></button>
+                    <button type="button" class="btn btn-lg btn-outline-light"><i class="bi bi-palette"></i></button>
+                    <button type="button" class="btn btn-lg btn-outline-light" data-bs-toggle="button" onclick="wcApp.classList.toggle('show-wc-app-menu-propeties'); this.blur()"><i class="bi bi-sliders2"></i></button>
                 </div>
                 <div class="px-1">
                     <div class="wc-app-menu-tools gap-1 px-1 py-1 d-flex flex-wrap justify-content-center mx-auto " >
@@ -939,8 +927,17 @@
                                 </div>
                             </div>
                             <hr>
-                            <div class="d-flex flex-wrap gap-1 property-wrap">
-                                <div class="input-group"><span class="input-group-text" >size</span><input class="form-control" type="number" name="size" placeholder="size" value="5" ></div>
+                            <div class="d-flex flex-column gap-1">
+                                <div>
+                                    <label class="form-label">Size</label>
+                                    <div class="input-group  ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)).toFixed(0)+' px'">
+                                        <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                        <div class="form-control" >
+                                            <input type="range" class="form-range d-block" name="size" placeholder="size" min="1" max="200" step="1"  value="1">
+                                        </div>
+                                        <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                    </div>
+                                </div>
                                 <div class="input-group"><span class="input-group-text" >roundness(원형율)</span><input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1" value="1" ></div>
                                 <div class="input-group"><span class="input-group-text" >angle(각도)</span><input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1" value="0" ></div>
                                 <div class="input-group"><span class="input-group-text" >hardness(경도)</span><input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1" value="1" ></div>
