--- a/editor.html
+++ b/editor.html
@@ -613,8 +613,8 @@
                             </div>
                             <div class="d-flex justify-content-end gap-1 flex-fill">
                                 <div class="input-group" style="width:20em">
-                                    <span class="input-group-text justify-content-center" style="width:4em" >Alpha</span>
-                                    <div class="form-control ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)+' %'" onchange="editor.document.history.save()">
+                                    <div class="form-control ui-input-stepper ui-input-stepper-data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)+' %'" onchange="editor.document.history.save()">
+                                        <span class="input-group-text justify-content-center" style="width:4em" >Alpha</span>
                                         <input type="range" class="form-range m-0 d-block" id="layer-alpha" min="0" max="1" value="1" step="0.01" oninput="if(editor?.document?.layer){ editor.document.layer.alpha = this.value; editor.document.layer.flush(); editor.document.layers.ready()}" >
                                     </div>
                                 </div>
@@ -682,7 +682,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="d-flex flex-wrap gap-1">
+                        <div class="d-flex flex-column flex-wrap gap-1">
                             <form name="form_layer_resize" class="flex-fill" action="" onsubmit="
                                 if(this.closest('.modal')?.layer){ 
                                     const layer = this.closest('.modal')?.layer
@@ -691,7 +691,7 @@
                                     editor.document.layers.ready();
                                     editor.document.history.save();
                                 } return false">
-                                <div class="input-group w-100">
+                                <div class="input-group">
                                     <span class="input-group-text justify-content-center" style="width:6em" >Size</span>
                                     <input class="form-control" type="number" name="width" placeholder="width" min="1" max="10000">
                                     <span class="input-group-text" >X</span>
@@ -707,9 +707,9 @@
                                     layer.flush();
                                     editor.document.layers.ready();
                                 }" onchange="this.oninput(event); editor.document.history.save(); return false;">
-                                <div class="input-group w-100">
+                                <div class="input-group ui-input-stepper">
                                     <span class="input-group-text justify-content-center" style="width:6em" >Zoom</span>
-                                    <div class="form-control ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)+' %'" onchange="editor.document.history.save()">
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)" onchange="editor.document.history.save()">
                                         <input class="form-range d-block" type="range" name="zoom" placeholder="zoom" step="0.01" min="0" max="3" >
                                     </div>
                                 </div>
@@ -722,9 +722,9 @@
                                     layer.flush();
                                     editor.document.layers.ready();
                                 }" onchange="return this.onsubmit(event)" onsubmit="this.oninput(event); editor.document.history.save(); return false;">
-                                <div class="input-group w-100">
+                                <div class="input-group ui-input-stepper">
                                     <span class="input-group-text justify-content-center" style="width:6em" >Alpha</span>
-                                    <div class="form-control ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)+' %'" onchange="editor.document.history.save()">
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)" onchange="editor.document.history.save()">
                                         <input class="form-range d-block" type="range" name="alpha" placeholder="alpha" step="0.1" min="0" max="1" >
                                     </div>
                                 </div>
@@ -737,9 +737,9 @@
                                     layer.flush();
                                     editor.document.layers.ready();
                                 }" onchange="this.oninput(event); editor.document.history.save(); return false;">
-                                <div class="input-group w-100">
+                                <div class="input-group  ui-input-steppe">
                                     <span class="input-group-text justify-content-center" style="width:6em" >Angle</span>
-                                    <div class="form-control ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*Math.PI*180/Math.PI).toFixed(0)+' °'" onchange="editor.document.history.save()">
+                                    <div class="form-control ui-input-stepper ui-input-stepper-data-value" data-value-suffix="°" oninput="this.dataset.value = (parseFloat(event.target.value)*Math.PI*180/Math.PI).toFixed(0)" onchange="editor.document.history.save()">
                                         <input class="form-range d-block" type="range" name="angle" placeholder="angle" step="0.01" min="-1" max="1" >
                                     </div>
                                 </div>
@@ -812,7 +812,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="d-flex flex-wrap gap-1">
+                        <div class="d-flex flex-column flex-wrap gap-1">
                             <form name="form_document_resize" class="flex-fill" action="" onsubmit="
                                 if(editor?.document){ 
                                     editor.document.resize(this.width.value,this.height.value);
@@ -836,9 +836,9 @@
                                     editor.document.layers.ready();
                                 }" onchange="this.oninput(event); editor.document.history.save(); return false;">
                                 
-                                <div class="input-group w-100">
+                                <div class="input-group ui-input-stepper" >
                                     <span class="input-group-text justify-content-center" style="width:6em" >Zoom</span>
-                                    <div class="form-control ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)+' %'" onchange="editor.document.history.save()">
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)" onchange="editor.document.history.save()">
                                         <input class="form-range d-block" type="range" name="zoom" placeholder="zoom" step="0.01" min="0" max="3" >
                                     </div>
                                 </div>
@@ -850,10 +850,10 @@
                                     editor.document.flush();
                                     editor.document.layers.ready();
                                 }" onchange="this.oninput(event); editor.document.history.save(); return false;">
-                                <div class="input-group w-100">
+                                <div class="input-group ui-input-stepper" >
                                     <span class="input-group-text justify-content-center" style="width:6em" >Angle</span>
-                                    <div class="form-control ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)*Math.PI*180/Math.PI).toFixed(0)+' °'" onchange="editor.document.history.save()">
-                                        <input class="form-range d-block" type="range" name="angle" placeholder="angle" step="0.01" min="-1" max="1" >
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="°" oninput="this.dataset.value = (parseFloat(event.target.value)*Math.PI*180/Math.PI).toFixed(0)" onchange="editor.document.history.save()">
+                                        <input class="form-range d-block" type="range" name="angle" placeholder="angle" step="0.001" min="-1" max="1" >
                                     </div>
                                 </div>
                             </form>
@@ -928,21 +928,55 @@
                             </div>
                             <hr>
                             <div class="d-flex flex-column gap-1">
-                                <div>
-                                    <label class="form-label">Size</label>
-                                    <div class="input-group  ui-input-stepper data-value" oninput="this.dataset.value = (parseFloat(event.target.value)).toFixed(0)+' px'">
-                                        <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
-                                        <div class="form-control" >
-                                            <input type="range" class="form-range d-block" name="size" placeholder="size" min="1" max="200" step="1"  value="1">
-                                        </div>
-                                        <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                <div class="input-group ui-input-stepper">
+                                    <span class="input-group-text" >Size</span>
+                                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="px" oninput="this.dataset.value = (parseFloat(event.target.value)).toFixed(0)">
+                                        <input type="range" class="form-range d-block" name="size" placeholder="size" min="1" max="200" step="1"  value="5">
                                     </div>
+                                    <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
                                 </div>
-                                <div class="input-group"><span class="input-group-text" >roundness(원형율)</span><input class="form-control" type="number" name="roundness" placeholder="roundness" step="0.05" min="0" max="1" value="1" ></div>
-                                <div class="input-group"><span class="input-group-text" >angle(각도)</span><input class="form-control" type="number" name="angle" placeholder="angle" step="0.05" min="-1" max="1" value="0" ></div>
-                                <div class="input-group"><span class="input-group-text" >hardness(경도)</span><input class="form-control" type="number" name="hardness" placeholder="hardness" step="0.05" min="0" max="1" value="1" ></div>
-                                <div class="input-group"><span class="input-group-text" >opacity(불투명도)</span><input class="form-control" type="number" name="opacity" placeholder="opacity" step="0.05" min="0" max="1" value="1" ></div>
-                                <div class="input-group"><span class="input-group-text" >spacing(간격)</span><input class="form-control" type="number" name="spacing" placeholder="spacing" step="0.005" min="0.005" max="2" value="0.25" ></div>
+                                
+                                <div class="input-group ui-input-stepper">
+                                    <span class="input-group-text" >roundness(원형율)</span>
+                                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%"  oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)">
+                                        <input type="range" class="form-range d-block" name="roundness" placeholder="roundness" step="0.01" min="0" max="1" value="1" >
+                                    </div>
+                                    <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                </div>
+                                <div class="input-group ui-input-stepper">
+                                    <span class="input-group-text" >angle(각도)</span>
+                                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="°"  oninput="this.dataset.value = (parseFloat(event.target.value)*Math.PI*180/Math.PI).toFixed(0)">
+                                        <input type="range" class="form-range d-block" name="angle" placeholder="angle" step="0.001" min="-1" max="1" value="0" >
+                                    </div>
+                                    <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                </div>
+                                <div class="input-group ui-input-stepper">
+                                    <span class="input-group-text" >hardness(경도)</span>
+                                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)">
+                                        <input type="range" class="form-range d-block" name="hardness" placeholder="hardness" step="0.01" min="0" max="1" value="1" >
+                                    </div>
+                                    <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                </div>
+                                <div class="input-group ui-input-stepper">
+                                    <span class="input-group-text" >opacity(불투명도)</span>
+                                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)">
+                                        <input type="range" class="form-range d-block" name="opacity" placeholder="opacity" step="0.01" min="0" max="1" value="1" >
+                                    </div>
+                                    <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                </div>
+                                <div class="input-group ui-input-stepper">
+                                    <span class="input-group-text" >spacing(간격)</span>
+                                    <button type="button" class="btn btn-primary btn-stepper" data-stepper="down">-</button>
+                                    <div class="form-control ui-input-stepper-data-value" data-value-suffix="%" oninput="this.dataset.value = (parseFloat(event.target.value)*100).toFixed(0)">
+                                        <input type="range" class="form-range d-block" name="spacing" placeholder="spacing" step="0.05" min="0.05" max="4" value="0.25" >
+                                    </div>
+                                    <button type="button" class="btn btn-primary btn-stepper"data-stepper="up">+</button>
+                                </div>
                                 <div class="input-group">
                                     <span class="input-group-text" >solidColor(단색)</span>
                                     <select class="form-select " name="solidColor" id="" >
